methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: reassignment to val
def move(nbPas: Int,versLAvant: Boolean) {while (nbPas!=0) if (versLAvant) {  {avance(); nbPas = nbPas - 1}}
                                                                                               ^MethodsArgs:3: error: reassignment to val
                                         else {recule(); nbPas = nbPas - 1}}
                                                               ^