methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean) {while (nbPas!=0) if (versLAvant) {  {avance(); nbPas = nbPas - 1}}
                                         else {recule(); nbPas = nbPas - 1}}
